# openSim-core

./: CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: build.yml
App/src/: App.cpp  main.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EntryPoint.h
